Stop the map overlapping the top bar

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -455,7 +455,7 @@ body.site-export #tabnav a#exportanchor {
 
 .site-index .leaflet-top,
 .site-export .leaflet-top {
-  top: 40px !important;
+  top: 10px !important;
 
   .leaflet-control {
     margin-top: 0px !important;
@@ -679,16 +679,11 @@ body.site-export #tabnav a#exportanchor {
 .site-index #content,
 .site-export #content {
   position: fixed;
-  margin-top: 0px;
   left: 0px;
   right: 0px;
   top: 0px;
   bottom: 0px;
   padding: 0px;
-}
-
-.site-edit #content {
-  top: 30px;
 }
 
 #slim_container {
